--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,46 +1,49 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
-  :root {
-    --background: 240 10% 3.9%;
-    --foreground: 0 0% 98%;
- 
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
- 
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
- 
-    --card: 240 10% 3.9%;
-    --card-foreground: 0 0% 98%;
- 
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
- 
-    --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
- 
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
- 
-    --accent: 240 3.7% 15.9%;
-    --accent-foreground: 0 0% 98%;
- 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
- 
-    --ring: 240 4.9% 83.9%;
-  }
+	:root {
+		--background: #0b1120;
+		--foreground: 221.5 30.2% 91.6%;
+
+		--muted: #202937;
+		--muted-foreground: 215 20.2% 65.1%;
+
+		--popover: 0 0% 55.3%;
+		--popover-foreground: 221.5 30.2% 91.6%;
+
+		--card: #0e172a;
+		--card-foreground: 221.5 30.2% 91.6%;
+
+		--border: #202937;
+		--input: #202937;
+		--sidebar: #0e172a;
+
+		--primary: #a252c8;
+		--primary-foreground: #f5f5f5;
+
+		--secondary: #202937;
+		--secondary-foreground: 221.5 30.2% 91.6%;
+
+		--accent: 221.5 30.2% 91.6%;
+		--accent-foreground: 221.5 30.2% 91.6%;
+
+		--destructive: 0 62.8% 30.6%;
+		--destructive-foreground: 221.5 30.2% 91.6%;
+
+		--ring: #202937;
+
+		--radius: 0.5rem;
+	}
 }
- 
+
 @layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-    font-family: 'Lato', sans-serif;
-  }
+	* {
+		@apply border-border;
+	}
+	body {
+		@apply bg-background text-foreground text-base;
+		font-family: 'Lato', sans-serif;
+	}
 }
